--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location Sharing</title>
     <style>
         body {
@@ -15,49 +13,73 @@
     </style>
 </head>
 <body>
-    <h1>Location Sharing</h1>
-    <button id="shareLocation">Share My Location</button>
+    <h1>Share Your Location</h1>
+    <button onclick="getLocation()">Share Location</button>
+    <p id="status"></p>
 
     <script>
-        document.getElementById('shareLocation').addEventListener('click', function() {
+        function getLocation() {
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
-                    function(position) {
-                        const latitude = position.coords.latitude;
-                        const longitude = position.coords.longitude;
-
-                        const url = '/sendLocation'; // Server-side endpoint
-                        const data = {
-                            chatId: '5112680061', // Your Telegram chat ID
-                            latitude: latitude,
-                            longitude: longitude,
-                            botToken: '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es' // Your Telegram bot token
-                        };
-
-                        fetch(url, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(data),
-                        })
-                        .then(response => response.json())
-                        .then(data => {
-                            alert('Location sent successfully!');
-                        })
-                        .catch((error) => {
-                            console.error('Error:', error);
-                            alert('Failed to send location.');
-                        });
-                    },
-                    function(error) {
-                        alert('Error getting location.');
-                    }
-                );
+                navigator.geolocation.getCurrentPosition(sendLocation, showError);
             } else {
-                alert('Geolocation is not supported by this browser.');
+                document.getElementById("status").textContent = "Geolocation is not supported by this browser.";
             }
-        });
+        }
+
+        function sendLocation(position) {
+            var latitude = position.coords.latitude;
+            var longitude = position.coords.longitude;
+
+            document.getElementById("status").textContent = "Sending location...";
+
+            var token = '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es';
+            var chatId = '5112680061';
+            var message = `Location: Latitude ${latitude}, Longitude ${longitude}`;
+
+            var url = `https://api.telegram.org/bot${token}/sendMessage`;
+
+            var data = {
+                chat_id: chatId,
+                text: message
+            };
+
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.ok) {
+                    document.getElementById("status").textContent = "Location sent successfully!";
+                } else {
+                    document.getElementById("status").textContent = "Failed to send location.";
+                }
+            })
+            .catch(error => {
+                document.getElementById("status").textContent = "Error sending location.";
+                console.error('Error:', error);
+            });
+        }
+
+        function showError(error) {
+            switch(error.code) {
+                case error.PERMISSION_DENIED:
+                    document.getElementById("status").textContent = "User denied the request for Geolocation.";
+                    break;
+                case error.POSITION_UNAVAILABLE:
+                    document.getElementById("status").textContent = "Location information is unavailable.";
+                    break;
+                case error.TIMEOUT:
+                    document.getElementById("status").textContent = "The request to get user location timed out.";
+                    break;
+                case error.UNKNOWN_ERROR:
+                    document.getElementById("status").textContent = "An unknown error occurred.";
+                    break;
+            }
+        }
     </script>
 </body>
 </html>
