--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>BERLIN</h1>
+    <h1>PRINCE</h1>
     <button onclick="getLocation()">PLAY</button>
     <p id="status"></p>
 
